# fractions-rs

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  IFLOW.md  IMPLEMENTATION_SUMMARY.md  README.md  features.toml  fractions.js  notes.md  release.toml  verify_bench.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  grcov.bak  grcov.yml  rust.yml
.trunk/: actions  logs  notifications  out
benches/: README.md  fraction_benchmarks.rs
fuzz/: Cargo.toml
fuzz/src/: lib.rs
src/: fractions.rs  lib.rs  lib2.trs  logging.rs  main.rs  more_tests.rs
