[package]
name = "fractions-rs"
version = "0.1.0"
edition = "2021"
description = "Fractions in Rust"
repository = "https://github.com/luk036/fractions-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fractions"
path = "src/lib.rs"

[dependencies]
num-integer = { version = "0.1.44" }
num-traits = { version = "0.2.17" }

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"
